# Keyvoice

./: .env.example  .gitattributes  .gitignore  README.md  bubble.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  app.css  bubble.css  bubble.tsx  index.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: bubble.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  fn_key_listener.rs  fn_key_monitor.rs  groq.rs  lib.rs  main.rs  permissions.rs  sound.rs  transcripts.rs  tray.rs  whisper.rs  window.rs
src-tauri/src/platform/macos/: permissions.rs
src/bindings/: index.ts
src/components/: HotkeySelector.tsx  MorphingBubbleLoader.tsx  Timeline.tsx  TitleBar.tsx
