[package]
name = "TalkType"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talktype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "devtools",
] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rodio = "0.19"
cpal = "0.15"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
dirs = "5.0"
tauri-specta = { version = "2.0.0-rc.20", features = [
    "derive",
    "javascript",
    "typescript",
] }
specta = { version = "2.0.0-rc.22" }
specta-typescript = "0.0.9"
rdev = "0.5.2"
whisper-rs = { version = "0.11", features = ["coreml", "metal"] }
hound = "3.5"
rubato = "0.15"
ringbuf = "0.4"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23"
block = "0.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
